<?xml version="1.0"?>
<package>
  <name>sin_seq</name>
  <version>1.0.0</version>
  <description>The sine_seq package for GT AE</description>
  <maintainer email="amberrobertsit@gmail.com">Amber Roberts</maintainer>
  <license>GT</license>
  <!-- <url type="website">http://wiki.ros.org/sine_seq</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>genmsg</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>genmsg</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
